--- a/WarehouseClassLibraryMVC/WarehouseClassLibraryMVC.csproj
+++ b/WarehouseClassLibraryMVC/WarehouseClassLibraryMVC.csproj
@@ -26,4 +26,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorWarehouse\BlazorWarehouse.csproj" />
+  </ItemGroup>
+
 </Project>
