Downgraded AspNetCore packages, adjusted launchSettings.json, added collapsable bootstrap navbar to MainLayout

--- a/BlazorWarehouse/BlazorWarehouse.csproj
+++ b/BlazorWarehouse/BlazorWarehouse.csproj
@@ -11,11 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.12" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.12" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Companies.razor" />
   </ItemGroup>
 
@@ -25,6 +20,11 @@
 
   <ItemGroup>
     <None Include="Pages\Companies.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" />
   </ItemGroup>
 
   <ItemGroup>
