--- a/WarehouseWebAPI/Properties/launchSettings.json
+++ b/WarehouseWebAPI/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       //"launchBrowser": true,
-      //"launchUrl": "weatherforecast",
+      //"launchUrl": "Companies",
       "applicationUrl": "https://localhost:7180;http://localhost:5037",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
