--- a/BlazorWarehouse/BlazorWarehouse.csproj
+++ b/BlazorWarehouse/BlazorWarehouse.csproj
@@ -7,15 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\CompanyCard.razor" />
+    <Content Remove="Components\OrderCard.razor" />
     <Content Remove="Pages\CompanyOrder.razor" />
+    <Content Remove="Pages\Product\Products.razor" />
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\CompanyCard.razor" />
+    <_ContentIncludedByDefault Remove="Components\OrderCard.razor" />
     <_ContentIncludedByDefault Remove="Pages\CompanyOrder.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Product\Products.razor" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Components\CompanyCard.razor" />
+    <None Include="Components\OrderCard.razor" />
     <None Include="Pages\CompanyOrder.razor" />
+    <None Include="Pages\Product\Products.razor" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +44,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WarehouseModels\WarehouseModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\CompanyCard.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\OrderCard.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Product\Products.razor" />
   </ItemGroup>
 
 </Project>
